# MiniWar

./: '  .gitignore  Array.natvis  CMakeLists.txt  CMakeSettings.json  Project.sln  README.md  TODO.md  build.sh
.github/workflows/: build.yml
CMake/: DefaultFortran.cmake  Utils.cmake
MiniWar/: Building.h  CMakeLists.txt  MiniWar.vcxproj  MiniWar.vcxproj.filters  Player.h  Weapon.h  array.cpp  array.h  config.json  imgui.ini  region.h
MiniWar/Debug/: vc143.idb
MiniWar/Debug/MiniWar.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MiniWar.lastbuildstate
MiniWar/resources/models/: Missile AGM-65.mtl  Missile AGM-65.obj.mtl  missile.mlp
MiniWar/resources/textures/: guard.xcf  scatter.xcf
MiniWar/x64/Debug/: MiniWar.exe.recipe  MiniWar.ilk  vc143.idb
MiniWar/x64/Debug/MiniWar.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MiniWar.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters
OpenGL/x64/Debug/: MiniWar.exe.recipe  MiniWar.ilk  vc143.idb
OpenGL/x64/Debug/MiniWar.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Sample-Test1/: Sample-Test1.vcxproj
UnitTest1/: UnitTest1.cpp  UnitTest1.vcxproj
cpp/: Engine.cpp  Main.cpp  globals.cpp  mash.cpp  output.cpp  shader.cpp
cpp/Logic/: AI.cpp  Army.cpp  Building.cpp  Player.cpp  PowerStation.cpp  Region.cpp  RegionManager.cpp  Weapon.cpp
cpp/utils/: Array.cpp  Config.cpp  GlobalTimer.cpp  Operation.cpp  Point.cpp
header/: ByteArray.h  Camera.h  Engine.h  Timer.h  debug.h  globals.h  mash.h  mesh.h  output.h  points.h  shader.h
header/Exception/: FullHpException.h  SurrenderNotAttackedException.h
header/Logic/: AI.h  Army.h  Building.h  GameEffect.h  Player.h  PowerStation.h  Region.h  RegionManager.h  Resource.h  Weapon.h  region.h
header/passes/: FlameRenderPass.h  FragmentBuffer.h  SSBO.h  SSBOByteArray.h
header/test/: Config.cpp  main
header/utils/: Array.h  Config.h  CoordTranslate.h  FloatBuffer.h  GlobalTimer.h  ImageLoader.h  Operation.h  Point.h  RegionData.h  RegionSSBOBuffer.h  RegionSelector.h  SmoothMove.h
include/: linmath.h
include/bass/: bass.h
include/imgui/: imgui.cpp  imgui_demo.cpp  imgui_impl_glfw.cpp
linux/: .gitignore  CMakeLists.txt  CppProperties.json  README.md
linux/MiniWar/: config.json  imgui.ini
linux/Sample-Test1/: Sample-Test1.vcxproj  pch.h
linux/UnitTest1/: UnitTest1.cpp  UnitTest1.vcxproj
linux/cpp/: Engine.cpp  Main.cpp  globals.cpp  shader.cpp
linux/cpp/Logic/: Building.cpp  Player.cpp  Region.cpp  RegionManager.cpp  Weapon.cpp
linux/cpp/utils/: Array.cpp  Config.cpp  GlobalTimer.cpp  Operation.cpp
linux/header/: ByteArray.h  Camera.h  Engine.h  Timer.h  debug.h  globals.h  mash.h  output.h  points.h  shader.h
linux/header/Exception/: FullHpException.h
linux/header/Logic/: AI.h  Army.h  Building.h  Player.h  Region.h  RegionManager.h  Weapon.h
linux/header/passes/: FlameRenderPass.h  FragmentBuffer.h  SSBO.h  SSBOByteArray.h
linux/header/utils/: Array.h  Config.h  FloatBuffer.h  GlobalTimer.h  ImageLoader.h  Operation.h  Point.h  RegionData.h  RegionSSBOBuffer.h  RegionSelector.h  SmoothMove.h
linux/include/: linmath.h
linux/include/imgui/: imconfig.h  imgui.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_internal.h
linux/res src/guard/: buf0.gc  common.nml
linux/res src/scatter/: buf0.gc  common.nml  include.ml  main.ml
linux/shaders/: direct_tex.frag  direct_tex.vert  flame_render_pass.frag  flame_render_pass.vert  gaussian_blur.frag  gaussian_blur.vert  main_game_pass.frag  main_game_pass.vert  map_renderer.frag  normal_gl.frag  normal_gl.vert  points_renderer.vert
res src/guard/: buf0.gc
res src/scatter/: buf0.gc  common.nml  include.ml
shaders/: direct_tex.frag  direct_tex.vert  flame_render_pass.frag  flame_render_pass.vert  gaussian_blur.frag  gaussian_blur.vert  main_game_pass.frag  main_game_pass.vert  map_renderer.frag  map_renderer.vert  normal_gl.frag  normal_gl.vert  points_renderer.frag  points_renderer.vert
